--- a/front-end/src/css/App.css
+++ b/front-end/src/css/App.css
@@ -6,9 +6,8 @@
 }
 
 .homeWrapper {
-  /* position: relative; */
   height: 100vh;
-  /* top: 140px; */
+  overflow: hidden;
 }
 
 .background-enabled {
@@ -42,9 +41,9 @@
 
 .homeWrapper .contacts {
   z-index: 12;
-  position: absolute;
-  bottom: 50px;
-  left: 50px;
+  position: relative;
+  bottom: 4vh;
+  width: 20vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -52,10 +51,10 @@
 }
 
 .homeWrapper .socialLink {
-  z-index: 12;
-  position: absolute;
-  bottom: 50px;
-  right: 50px;
+  z-index: 14;
+  position: relative;
+  bottom: 4vh;
+  width: 20vw;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -63,13 +62,16 @@
 }
 
 .homeWrapper .socialLink .icon {
+  z-index: 14;
   margin-bottom: 10px;
+  position: relative;
+  right: 50px;
 }
 
 .homeWrapper .followMe {
   z-index: 12;
-  position: absolute;
-  bottom: 200px;
+  position: relative;
+  bottom: 75px;
   right: 55px;
   display: flex;
   flex-direction: column;
